--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.ConvergeHub.TestCases.TC_AddLead</td>
+<td>com.ConvergeHub.TestCases.TC_AdvanceSearch</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>LeadCreation</td>
-<td>Regression Smoke </td>
+<td>AdvanceSearch</td>
+<td>Regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
