--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60af79">  <td>19/01/15 18:59:57</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead@55040f2f]">&gt;&gt;setUp</td> 
+<tr bgcolor="60af79">  <td>19/01/18 12:33:03</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_AdvanceSearch@55040f2f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1405747618</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>19/01/15 19:00:10</td>   <td>12895</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddLead.LeadCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead@55040f2f]">LeadCreation</td> 
+<tr bgcolor="9b7d71">  <td>19/01/18 12:33:16</td>   <td>12657</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AdvanceSearch.AdvanceSearch()[pri:0, instance:com.ConvergeHub.TestCases.TC_AdvanceSearch@55040f2f]">AdvanceSearch</td> 
   <td>main@1405747618</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>19/01/15 19:00:12</td>   <td>15143</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead@55040f2f]">&lt;&lt;TearDown</td> 
+<tr bgcolor="60af79">  <td>19/01/18 12:33:28</td>   <td>25047</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_AdvanceSearch@55040f2f]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1405747618</td>   <td></td> </tr>
 </table>
