--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.ConvergeHub.TestCases.TC_AdvanceSearch</td>
+<td>com.ConvergeHub.TestCases.TC_BasicSearch</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>AdvanceSearch</td>
+<td>BasicSearch</td>
 <td>Regression </td>
 </tr>
 <tr>
