--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\sunit\AppData\Local\Temp\testng-eclipse--354583002\testng-customsuite.xml</span>
+                    <span>C:\Users\sunit\AppData\Local\Temp\testng-eclipse-1088678742\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ConvergeHub.TestCases.TC_MassUpdateForLead" hash-for-method="MassUpdateforlead">MassUpdateforlead</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.ConvergeHub.TestCases.TC_ConvertLead" hash-for-method="Convertlead">Convertlead</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,16 +120,16 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.ConvergeHub.TestCases.TC_MassUpdateForLead</span>
+              <span class="class-name">com.ConvergeHub.TestCases.TC_ConvertLead</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="MassUpdateforlead">
-                  </a> <!-- MassUpdateforlead -->
-                  <span class="method-name">MassUpdateforlead</span>
+                  <a name="Convertlead">
+                  </a> <!-- Convertlead -->
+                  <span class="method-name">Convertlead</span>
                   <em>
-(Mass Update for Lead)                  </em>
+(Converting a Lead)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sunit\AppData\Local\Temp\testng-eclipse--354583002\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sunit\AppData\Local\Temp\testng-eclipse-1088678742\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.ConvergeHub.TestCases.TC_MassUpdateForLead&quot;/&gt;
+      &lt;class name=&quot;com.ConvergeHub.TestCases.TC_ConvertLead&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -174,7 +174,7 @@
               <span class="test-group-name">Regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">MassUpdateforlead</span>
+                <span class="method-in-group-name">Convertlead</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -196,14 +196,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'MassUpdateforlead')
-data.setCell(0, 2, 'com.ConvergeHub.TestCases.TC_MassUpdateForLead')
-data.setCell(0, 3, 51087);
+data.setCell(0, 1, 'Convertlead')
+data.setCell(0, 2, 'com.ConvergeHub.TestCases.TC_ConvertLead')
+data.setCell(0, 3, 68676);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 51 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -229,18 +229,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.ConvergeHub.TestCases.TC_MassUpdateForLead</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.ConvergeHub.TestCases.TC_ConvertLead</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">MassUpdateforlead</span>
-                <span class="method-start">13246 ms</span>
+                <span class="method-name">Convertlead</span>
+                <span class="method-start">11962 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">64376 ms</span>
+                <span class="method-start">80683 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
