--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9b7d71">  <td>19/01/19 11:17:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_MassUpdateForLead.MassUpdateforlead()[pri:0, instance:com.ConvergeHub.TestCases.TC_MassUpdateForLead@55040f2f]">MassUpdateforlead</td> 
+<tr bgcolor="9b7d71">  <td>19/01/19 15:05:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_ConvertLead.Convertlead()[pri:0, instance:com.ConvergeHub.TestCases.TC_ConvertLead@55040f2f]">Convertlead</td> 
   <td>main@1405747618</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>19/01/19 11:18:29</td>   <td>51130</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_MassUpdateForLead@55040f2f]">&lt;&lt;TearDown</td> 
+<tr bgcolor="60af79">  <td>19/01/19 15:06:58</td>   <td>68722</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_ConvertLead@55040f2f]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1405747618</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>19/01/19 11:17:25</td>   <td>-13237</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_MassUpdateForLead@55040f2f]">&gt;&gt;setUp</td> 
+<tr bgcolor="60af79">  <td>19/01/19 15:05:37</td>   <td>-11953</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_ConvertLead@55040f2f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1405747618</td>   <td></td> </tr>
 </table>
