--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="60af79">  <td>19/01/19 16:00:36</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_MergeDuplicate@55040f2f]">&gt;&gt;setUp</td> 
+<tr bgcolor="60af79">  <td>19/01/19 19:13:51</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddDeal@55040f2f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1405747618</td>   <td></td> </tr>
-<tr bgcolor="9b7d71">  <td>19/01/19 16:00:48</td>   <td>11429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_MergeDuplicate.MergeLeads()[pri:0, instance:com.ConvergeHub.TestCases.TC_MergeDuplicate@55040f2f]">MergeLeads</td> 
+<tr bgcolor="9b7d71">  <td>19/01/19 19:14:01</td>   <td>9709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddDeal.LeadCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddDeal@55040f2f]">LeadCreation</td> 
   <td>main@1405747618</td>   <td></td> </tr>
-<tr bgcolor="60af79">  <td>19/01/19 16:01:40</td>   <td>63954</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_MergeDuplicate@55040f2f]">&lt;&lt;TearDown</td> 
+<tr bgcolor="60af79">  <td>19/01/19 19:14:36</td>   <td>44977</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddDeal@55040f2f]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1405747618</td>   <td></td> </tr>
 </table>
