--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>TC_MergeDuplicate.MergeLeads()[pri:0, instance:com.ConvergeHub.TestCases.TC_MergeDuplicate@55040f2f]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>TC_AddDeal.LeadCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddDeal@55040f2f]<br/></td></tr>
 </table>
