--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c0edeb">  <td>19/01/21 12:55:40</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_AdvanceSearch_Deal@3a93b025]">&gt;&gt;setUp</td> 
+<tr bgcolor="c0edeb">  <td>19/01/21 17:18:18</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_MassUpdateForDeal@3a93b025]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@341796579</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>19/01/21 12:55:49</td>   <td>9495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AdvanceSearch_Deal.AdvanceSearch()[pri:0, instance:com.ConvergeHub.TestCases.TC_AdvanceSearch_Deal@3a93b025]">AdvanceSearch</td> 
+<tr bgcolor="6dabbc">  <td>19/01/21 17:18:28</td>   <td>10104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_MassUpdateForDeal.MassUpdateforlead()[pri:0, instance:com.ConvergeHub.TestCases.TC_MassUpdateForDeal@3a93b025]">MassUpdateforlead</td> 
   <td>main@341796579</td>   <td></td> </tr>
-<tr bgcolor="c0edeb">  <td>19/01/21 12:56:22</td>   <td>42661</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_AdvanceSearch_Deal@3a93b025]">&lt;&lt;TearDown</td> 
+<tr bgcolor="c0edeb">  <td>19/01/21 17:19:04</td>   <td>46415</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_MassUpdateForDeal@3a93b025]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@341796579</td>   <td></td> </tr>
 </table>
