--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,3 +1,5 @@
 <h2>Reporter output</h2><table><tr><td>Cpaturing Screenshot</td></tr>
-<tr><td><a target="_blank" href="D:\AutomationTestScripts\Workspace\target\surefire-reports\html\Wed_Jan_16_10_16_18_IST_2019.jpg"> Screenshot </a></td></tr>
+<tr><td><a target="_blank" href=D:\AutomationTestScripts\Workspace\target\surefire-reports\html\Tue_Jan_22_11_33_30_IST_2019.jpg>Screenshot</a></td></tr>
+<tr><td>Cpaturing Screenshot</td></tr>
+<tr><td><a target="_blank" href=D:\AutomationTestScripts\Workspace\target\surefire-reports\html\Tue_Jan_22_11_34_37_IST_2019.jpg>Screenshot</a></td></tr>
 </table>
