--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.ConvergeHub.TestCases.TC_AddContacts</td>
+<td>com.ConvergeHub.TestCases.TC_AddTarget_Convert</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ContactCreation</td>
+<td>TargetCreation</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ConvertTarget</td>
 <td>Regression </td>
 </tr>
 <tr>
