--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>TC_AddContacts.ContactCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddContacts@3a93b025]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>TC_AddTarget_Convert.ConvertTarget()[pri:1, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@35cabb2a]<br/>TC_AddTarget_Convert.TargetCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@35cabb2a]<br/></td></tr>
 </table>
