--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6dabbc">  <td>19/01/21 18:08:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddContacts.ContactCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddContacts@3a93b025]">ContactCreation</td> 
-  <td>main@341796579</td>   <td></td> </tr>
-<tr bgcolor="c0edeb">  <td>19/01/21 18:09:16</td>   <td>46070</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddContacts@3a93b025]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@341796579</td>   <td></td> </tr>
-<tr bgcolor="c0edeb">  <td>19/01/21 18:08:21</td>   <td>-9083</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddContacts@3a93b025]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@341796579</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>19/01/22 12:36:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddTarget_Convert.ConvertTarget()[pri:1, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@35cabb2a]">ConvertTarget</td> 
+  <td>main@807657332</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>19/01/22 12:35:32</td>   <td>-40823</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddTarget_Convert.TargetCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@35cabb2a]">TargetCreation</td> 
+  <td>main@807657332</td>   <td></td> </tr>
+<tr bgcolor="c0edeb">  <td>19/01/22 12:36:28</td>   <td>15488</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@35cabb2a]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@807657332</td>   <td></td> </tr>
+<tr bgcolor="c0edeb">  <td>19/01/22 12:35:22</td>   <td>-50213</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@35cabb2a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@807657332</td>   <td></td> </tr>
 </table>
