--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,15 +4,20 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.ConvergeHub.TestCases.TC_AddLead</td>
+<td>com.ConvergeHub.TestCases.TC_AddTarget_Convert</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>LeadCreation</td>
-<td>Regression Smoke </td>
+<td>DealCreation</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ConvertTarget</td>
+<td>Regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
