--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d9bc64">  <td>19/01/16 10:15:50</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead@64c87930]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@898406901</td>   <td></td> </tr>
-<tr bgcolor="e262ad">  <td>19/01/16 10:15:59</td>   <td>8938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddLead.LeadCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead@64c87930]">LeadCreation</td> 
-  <td>main@898406901</td>   <td></td> </tr>
-<tr bgcolor="d9bc64">  <td>19/01/16 10:16:18</td>   <td>27874</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead@64c87930]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@898406901</td>   <td></td> </tr>
+<tr bgcolor="6379eb">  <td>19/01/22 11:32:55</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@1283bb96]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1223867739</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/22 11:33:04</td>   <td>8555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddTarget_Convert.ConvertTarget()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@1283bb96]">ConvertTarget</td> 
+  <td>main@1223867739</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/22 11:33:31</td>   <td>35987</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddTarget_Convert.DealCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@1283bb96]">DealCreation</td> 
+  <td>main@1223867739</td>   <td></td> </tr>
+<tr bgcolor="6379eb">  <td>19/01/22 11:34:38</td>   <td>102482</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@1283bb96]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1223867739</td>   <td></td> </tr>
 </table>
