--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -8,22 +8,46 @@
 <h3><p align="center">Results for<br/><em>Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>1 test</td>
+<td>4 tests</td>
 <td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>1 method:<br/>
+<td>2 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
 </tr>
 <tr>
-<td><a target='mainFrame' href='groups.html'>2 groups</a></td>
+<td><a target='mainFrame' href='groups.html'>1 group</a></td>
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Lead Test Cases (0/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Contact Test Cases (0/0/0)</td><td valign='top' align='right'>
+  <a href='Contact Test Cases.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Deal Test Cases (0/0/0)</td><td valign='top' align='right'>
+  <a href='Deal Test Cases.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Lead Test Cases (0/0/0)</td><td valign='top' align='right'>
   <a href='Lead Test Cases.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Target Test Cases (0/2/0)</td><td valign='top' align='right'>
+  <a href='Target Test Cases.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
