--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c0edeb">  <td>19/01/22 12:35:22</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@35cabb2a]">&gt;&gt;setUp</td> 
+<tr bgcolor="c0edeb">  <td>19/01/22 17:16:23</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_DeleteAccount@35cabb2a]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@807657332</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>19/01/22 12:35:32</td>   <td>9390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddTarget_Convert.TargetCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@35cabb2a]">TargetCreation</td> 
+<tr bgcolor="6dabbc">  <td>19/01/22 17:16:38</td>   <td>14631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_DeleteAccount.DeleteAccount()[pri:0, instance:com.ConvergeHub.TestCases.TC_DeleteAccount@35cabb2a]">DeleteAccount</td> 
   <td>main@807657332</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>19/01/22 12:36:12</td>   <td>50213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddTarget_Convert.ConvertTarget()[pri:1, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@35cabb2a]">ConvertTarget</td> 
-  <td>main@807657332</td>   <td></td> </tr>
-<tr bgcolor="c0edeb">  <td>19/01/22 12:36:28</td>   <td>65701</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@35cabb2a]">&lt;&lt;TearDown</td> 
+<tr bgcolor="c0edeb">  <td>19/01/22 17:17:18</td>   <td>54785</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_DeleteAccount@35cabb2a]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@807657332</td>   <td></td> </tr>
 </table>
