--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,35 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.ConvergeHub.TestCases.TC_AddLead_QuickView</td>
+<td>com.ConvergeHub.TestCases.TC_Task_Comments_Notes_Event_AddToList_ForAccount</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>LeadCreationQuickView</td>
+<td>AddAccountToList</td>
 <td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>AddCommentToAccount</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ScheduleEventForAccount</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CreatetaskForAccount</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>AddNoteToAccount</td>
+<td>Smoke </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
