--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c0edeb">  <td>19/01/28 12:30:29</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead_QuickView@35cabb2a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@807657332</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>19/01/28 12:30:39</td>   <td>9716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddLead_QuickView.LeadCreationQuickView()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead_QuickView@35cabb2a]">LeadCreationQuickView</td> 
-  <td>main@807657332</td>   <td></td> </tr>
-<tr bgcolor="c0edeb">  <td>19/01/28 12:31:10</td>   <td>40479</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead_QuickView@35cabb2a]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@807657332</td>   <td></td> </tr>
+<tr bgcolor="c0edeb">  <td>19/02/06 14:17:32</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_Task_Comments_Notes_Event_AddToList_ForAccount@1189dd52]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1164107853</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>19/02/06 14:18:09</td>   <td>37367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Task_Comments_Notes_Event_AddToList_ForAccount.CreatetaskForAccount()[pri:0, instance:com.ConvergeHub.TestCases.TC_Task_Comments_Notes_Event_AddToList_ForAccount@1189dd52]">CreatetaskForAccount</td> 
+  <td>main@1164107853</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>19/02/06 14:18:26</td>   <td>54167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Task_Comments_Notes_Event_AddToList_ForAccount.AddCommentToAccount()[pri:1, instance:com.ConvergeHub.TestCases.TC_Task_Comments_Notes_Event_AddToList_ForAccount@1189dd52]">AddCommentToAccount</td> 
+  <td>main@1164107853</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>19/02/06 14:18:42</td>   <td>69850</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Task_Comments_Notes_Event_AddToList_ForAccount.AddNoteToAccount()[pri:2, instance:com.ConvergeHub.TestCases.TC_Task_Comments_Notes_Event_AddToList_ForAccount@1189dd52]">AddNoteToAccount</td> 
+  <td>main@1164107853</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>19/02/06 14:19:00</td>   <td>87705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Task_Comments_Notes_Event_AddToList_ForAccount.ScheduleEventForAccount()[pri:3, instance:com.ConvergeHub.TestCases.TC_Task_Comments_Notes_Event_AddToList_ForAccount@1189dd52]">ScheduleEventForAccount</td> 
+  <td>main@1164107853</td>   <td></td> </tr>
+<tr bgcolor="6dabbc">  <td>19/02/06 14:19:16</td>   <td>104354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Task_Comments_Notes_Event_AddToList_ForAccount.AddAccountToList()[pri:4, instance:com.ConvergeHub.TestCases.TC_Task_Comments_Notes_Event_AddToList_ForAccount@1189dd52]">AddAccountToList</td> 
+  <td>main@1164107853</td>   <td></td> </tr>
+<tr bgcolor="c0edeb">  <td>19/02/06 14:19:32</td>   <td>119921</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_Task_Comments_Notes_Event_AddToList_ForAccount@1189dd52]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1164107853</td>   <td></td> </tr>
 </table>
