Implement Grouping in TestNG

--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,3 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.ConvergeHub.TestCases.TC_Tools.ManageDuplicateSearch<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Manage Duplicate Search</i></td></tr>
 </table>
