--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>TC_AddTarget_Convert.ConvertTarget()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@1283bb96]<br/>TC_AddTarget_Convert.DealCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@1283bb96]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>TC_Marketing.templateCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_Marketing@639c2c1d]<br/></td></tr>
 </table>
