--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9aa292">  <td>19/01/22 11:33:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddTarget_Convert.ConvertTarget()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@1283bb96]">ConvertTarget</td> 
-  <td>main@1223867739</td>   <td></td> </tr>
-<tr bgcolor="9aa292">  <td>19/01/22 11:33:31</td>   <td>27432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddTarget_Convert.DealCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@1283bb96]">DealCreation</td> 
-  <td>main@1223867739</td>   <td></td> </tr>
-<tr bgcolor="6379eb">  <td>19/01/22 11:34:38</td>   <td>93927</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@1283bb96]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1223867739</td>   <td></td> </tr>
-<tr bgcolor="6379eb">  <td>19/01/22 11:32:55</td>   <td>-8555</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddTarget_Convert@1283bb96]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1223867739</td>   <td></td> </tr>
+<tr bgcolor="83b78d">  <td>19/03/02 15:42:25</td>   <td>0</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_Marketing@639c2c1d]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@887750041</td>   <td></td> </tr>
+<tr bgcolor="83b78d">  <td>19/03/02 15:40:51</td>   <td>-93093</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_Marketing@639c2c1d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@887750041</td>   <td></td> </tr>
+<tr bgcolor="b5a082">  <td>19/03/02 15:41:47</td>   <td>-37824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Marketing.templateCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_Marketing@639c2c1d]">templateCreation</td> 
+  <td>main@887750041</td>   <td></td> </tr>
 </table>
