--- a/test-output/old/Suite/reporter-output.html
+++ b/test-output/old/Suite/reporter-output.html
@@ -1,5 +1,2 @@
-<h2>Reporter output</h2><table><tr><td>Cpaturing Screenshot</td></tr>
-<tr><td><a target="_blank" href=D:\AutomationTestScripts\Workspace\target\surefire-reports\html\Tue_Jan_22_11_33_30_IST_2019.jpg>Screenshot</a></td></tr>
-<tr><td>Cpaturing Screenshot</td></tr>
-<tr><td><a target="_blank" href=D:\AutomationTestScripts\Workspace\target\surefire-reports\html\Tue_Jan_22_11_34_37_IST_2019.jpg>Screenshot</a></td></tr>
+<h2>Reporter output</h2><table><tr><td><a target="_blank" href="D:\AutomationTestScripts\Workspace\target\surefire-reports\html\Sat_Mar_02_15_42_23_IST_2019.jpg">Screenshot</a></td></tr>
 </table>
