--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -8,18 +8,50 @@
 <h3><p align="center">Results for<br/><em>Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>4 tests</td>
+<td>11 tests</td>
 <td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>2 methods:<br/>
+<td>1 method:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
-&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
+&nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (1)</a></td>
 </tr>
 <tr>
 <td><a target='mainFrame' href='groups.html'>1 group</a></td>
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Account Test Cases (0/0/0)</td><td valign='top' align='right'>
+  <a href='Account Test Cases.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Activities Test Cases (0/0/0)</td><td valign='top' align='right'>
+  <a href='Activities Test Cases.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Billing Test Cases (0/0/0)</td><td valign='top' align='right'>
+  <a href='Billing Test Cases.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Collaboration Test Cases (0/0/0)</td><td valign='top' align='right'>
+  <a href='Collaboration Test Cases.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
 <table width='100%' class='test-failed'>
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>Contact Test Cases (0/0/0)</td><td valign='top' align='right'>
@@ -46,8 +78,32 @@
 
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Target Test Cases (0/2/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Service Test Cases (0/0/0)</td><td valign='top' align='right'>
+  <a href='Service Test Cases.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Target Test Cases (0/0/0)</td><td valign='top' align='right'>
   <a href='Target Test Cases.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Tools Test Cases (0/0/0)</td><td valign='top' align='right'>
+  <a href='Tools Test Cases.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Marketing Test Cases (1/0/0)</td><td valign='top' align='right'>
+  <a href='Marketing Test Cases.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
