--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.ConvergeHub.TestCases.TC_Marketing" hash-for-method="templateCreation">templateCreation</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.ConvergeHub.TestCases.TC_Marketing" hash-for-method="templateCreation({TemplateName=Test, TemplateSubject=Test Template, TemplateBody=Test Template, =})">templateCreation({TemplateName=Test, TemplateSubject=Test Template, TemplateBody=Test Template, =})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -125,9 +125,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="templateCreation">
-                  </a> <!-- templateCreation -->
+                  <a name="templateCreation({TemplateName=Test, TemplateSubject=Test Template, TemplateBody=Test Template, =})">
+                  </a> <!-- templateCreation({TemplateName=Test, TemplateSubject=Test Template, TemplateBody=Test Template, =}) -->
                   <span class="method-name">templateCreation</span>
+                  <span class="parameters">({TemplateName=Test, TemplateSubject=Test Template, TemplateBody=Test Template, =})</span>
                   <em>
 (Create a New Template)                  </em>
                 </div> <!-- method-content -->
@@ -168,12 +169,9 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Tools Test Cases&quot; group-by-instances=&quot;true&quot;&gt;
     &lt;groups&gt;
       &lt;run&gt;
-        &lt;include name=&quot;Smoke&quot;/&gt;
+        &lt;include name=&quot;Regression&quot;/&gt;
       &lt;/run&gt;
     &lt;/groups&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;com.ConvergeHub.TestCases.TC_Tools&quot;/&gt;
-    &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Tools Test Cases --&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Marketing Test Cases&quot; group-by-instances=&quot;true&quot;&gt;
     &lt;classes&gt;
@@ -218,7 +216,7 @@
                 <span class="test-name">Billing Test Cases (0 classes)</span>
               </li>
               <li>
-                <span class="test-name">Tools Test Cases (1 class)</span>
+                <span class="test-name">Tools Test Cases (0 classes)</span>
               </li>
               <li>
                 <span class="test-name">Marketing Test Cases (1 class)</span>
@@ -259,12 +257,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'templateCreation')
 data.setCell(0, 2, 'com.ConvergeHub.TestCases.TC_Marketing')
-data.setCell(0, 3, 35964);
+data.setCell(0, 3, 43776);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 35 seconds</span>
+              <span class="suite-total-time">Total running time: 43 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -276,25 +274,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">templateCreation</span>
+              <span class="reporter-method-name">templateCreation({TemplateName=Test, TemplateSubject=Test Template, TemplateBody=Test Template, =})</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output"><a target="_blank" href="D:\AutomationTestScripts\Workspace\target\surefire-reports\html\Sat_Mar_02_15_42_23_IST_2019.jpg">Screenshot</a></span>
+                <span class="reporter-method-output"><a target="_blank" href="D:\AutomationTestScripts\Workspace\target\surefire-reports\html\Tue_Mar_19_16_26_11_IST_2019.jpg">Screenshot</a></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.ConvergeHub.TestCases.TC_Tools</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">ManageDuplicateSearch</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Suite" class="panel">
@@ -309,12 +300,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">templateCreation</span>
-                <span class="method-start">55294 ms</span>
+                <span class="method-name">templateCreation({TemplateName=Test, TemplateSubject=Test Template, TemplateBody=Test Template, =})</span>
+                <span class="method-start">76539 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">93117 ms</span>
+                <span class="method-start">122463 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
