--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,18 +9,18 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Lead Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">63</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Lead Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">35</td><td></td><td></td></tr>
 <tr class="stripe"><td><a href="#t1">Deal Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1</td><td></td><td></td></tr>
 <tr><td><a href="#t2">Contact Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t3">Target Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5</td><td></td><td></td></tr>
-<tr><td><a href="#t4">Account Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t3">Target Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2</td><td></td><td></td></tr>
+<tr><td><a href="#t4">Account Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11</td><td></td><td></td></tr>
 <tr class="stripe"><td><a href="#t5">Service Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1</td><td></td><td></td></tr>
-<tr><td><a href="#t6">Collaboration Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1</td><td></td><td></td></tr>
+<tr><td><a href="#t6">Collaboration Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6</td><td></td><td></td></tr>
 <tr class="stripe"><td><a href="#t7">Activities Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1</td><td></td><td></td></tr>
-<tr><td><a href="#t8">Billing Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t9">Tools Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4</td><td>Smoke</td><td></td></tr>
-<tr><td><a href="#t10">Marketing Test Cases</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">37,857</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">1</th><th class="num">0</th><th class="num">0</th><th class="num">37,938</th><th colspan="2"></th></tr>
+<tr><td><a href="#t8">Billing Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">1</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t9">Tools Test Cases</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td>Regression</td><td></td></tr>
+<tr><td><a href="#t10">Marketing Test Cases</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">45,941</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">1</th><th class="num">0</th><th class="num">0</th><th class="num">46,000</th><th colspan="2"></th></tr>
 </table>
 <table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4" class="invisible"/></tr></tbody>
 <tbody id="t1"><tr><th colspan="4" class="invisible"/></tr></tbody>
@@ -32,8 +32,8 @@
 <tbody id="t7"><tr><th colspan="4" class="invisible"/></tr></tbody>
 <tbody id="t8"><tr><th colspan="4" class="invisible"/></tr></tbody>
 <tbody id="t9"><tr><th colspan="4" class="invisible"/></tr></tbody>
-<tbody id="t10"><tr><th colspan="4">Marketing Test Cases &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.ConvergeHub.TestCases.TC_Marketing</td><td><a href="#m0">templateCreation</a></td><td rowspan="1">1551521507201</td><td rowspan="1">35964</td></tr></tbody>
+<tbody id="t10"><tr><th colspan="4">Marketing Test Cases &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.ConvergeHub.TestCases.TC_Marketing</td><td><a href="#m0">templateCreation</a></td><td rowspan="1">1552992926932</td><td rowspan="1">43776</td></tr></tbody>
 </table>
-<h2>Lead Test Cases</h2><h2>Deal Test Cases</h2><h2>Contact Test Cases</h2><h2>Target Test Cases</h2><h2>Account Test Cases</h2><h2>Service Test Cases</h2><h2>Collaboration Test Cases</h2><h2>Activities Test Cases</h2><h2>Billing Test Cases</h2><h2>Tools Test Cases</h2><h2>Marketing Test Cases</h2><h3 id="m0">com.ConvergeHub.TestCases.TC_Marketing#templateCreation</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages"><a target="_blank" href="D:\AutomationTestScripts\Workspace\target\surefire-reports\html\Sat_Mar_02_15_42_23_IST_2019.jpg">Screenshot</a></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Lead Test Cases</h2><h2>Deal Test Cases</h2><h2>Contact Test Cases</h2><h2>Target Test Cases</h2><h2>Account Test Cases</h2><h2>Service Test Cases</h2><h2>Collaboration Test Cases</h2><h2>Activities Test Cases</h2><h2>Billing Test Cases</h2><h2>Tools Test Cases</h2><h2>Marketing Test Cases</h2><h3 id="m0">com.ConvergeHub.TestCases.TC_Marketing#templateCreation</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{TemplateName=Test, TemplateSubject=Test Template, TemplateBody=Test Template, =}</td></tr><tr><th>Messages</th></tr><tr><td><div class="messages"><a target="_blank" href="D:\AutomationTestScripts\Workspace\target\surefire-reports\html\Tue_Mar_19_16_26_11_IST_2019.jpg">Screenshot</a></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
