--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>TC_Marketing.templateCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_Marketing@639c2c1d]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>TC_Marketing.templateCreation(java.util.Hashtable)[pri:0, instance:com.ConvergeHub.TestCases.TC_Marketing@33d512c1]<br/></td></tr>
 </table>
