--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="83b78d">  <td>19/03/02 15:40:51</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_Marketing@639c2c1d]">&gt;&gt;setUp</td> 
+<tr bgcolor="739889">  <td>19/03/19 16:24:10</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_Marketing@33d512c1]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@887750041</td>   <td></td> </tr>
-<tr bgcolor="b5a082">  <td>19/03/02 15:41:47</td>   <td>55269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Marketing.templateCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_Marketing@639c2c1d]">templateCreation</td> 
+<tr bgcolor="b0bbb8">  <td>19/03/19 16:25:26</td>   <td>76517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_Marketing.templateCreation(java.util.Hashtable)[pri:0, instance:com.ConvergeHub.TestCases.TC_Marketing@33d512c1]">templateCreation</td> 
   <td>main@887750041</td>   <td></td> </tr>
-<tr bgcolor="83b78d">  <td>19/03/02 15:42:25</td>   <td>93093</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_Marketing@639c2c1d]">&lt;&lt;TearDown</td> 
+<tr bgcolor="739889">  <td>19/03/19 16:26:12</td>   <td>122441</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_Marketing@33d512c1]">&lt;&lt;TearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@887750041</td>   <td></td> </tr>
 </table>
